--- a/테스터 아이.html
+++ b/테스터 아이.html
@@ -18,7 +18,7 @@
     <li><h3>감상평에 대한 AI그림</h3></li>
     <h3>나는 인공지능은 감정이 없다고 생각했다. 사람에게 위로를 해주는 일은 상상도 하지 못했다. 하지만 이 소설을 읽고나니 인공지능도 위로를 해줄 수 있고 사람의 정서에 긍정적인 효과를 줄 수 있겠다는 생각이 들었다. 그리고 동성이 프로그램인 아이와 많은 시간을 보내자 동성의 태도가 서서히 긍정적으로 바뀌는 부분이 굉장히 인상깊었다. 왜냐하면 동성은 아이를 잃게 했다는 죄책감이 커서 일상생활도 잘하지 못했는데 이 아이를 만나고나서부터는 활기찬 모습을 보였고 자신의 잘못된 가치관을 인정하고 고쳐나가는 모습이 정말 보기 좋았기 때문이다. <br> 
     </h3>
-    <img src="테스터 아이 AI 그림.png" alt=테스터 아이">
+    <img src="테스터 아이 AI 그림.webp" alt=테스터 아이">
   <li><h3>감상평에 대한 AI 감정 평가</h3></li>
     <h3>당신이 작성한 『테스터 아이』 감상평은 깊이 있는 이해와 공감이 돋보입니다. 감정 평가를 통해 좀 더 자세히 접근해 볼게요.<br>
         &#10024; 놀라움과 흥미: 인공지능이 사람의 정서에 긍정적인 영향을 미칠 수 있다는 생각에 놀라움과 흥미를 느끼셨습니다. 이는 기술이 인간에게 줄 수 있는 새로운 가능성을 발견하는 부분이 인상적입니다.<br>
