--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <p></p>
 <!-- 하이퍼링크를 버튼처럼 스타일링 -->
 <p>
-    <a href="book1.html" class="button">에셔의 손</a><br><br>
-    <a href="book2.html" class="button">모멘트 아케이드</a><br><br>
-    <a href="book3.html" class="button">테스터 아이</a><br><br>
+    <a href="에셔의 손.html" class="button">에셔의 손</a><br><br>
+    <a href="모멘트 아케이드.html" class="button">모멘트 아케이드</a><br><br>
+    <a href="테스터 아이.html" class="button">테스터 아이</a><br><br>
 </p>
 </body>
 </html>
