--- a/모멘트 아케이드.html
+++ b/모멘트 아케이드.html
@@ -18,7 +18,7 @@
     <li><h3>감상평에 대한 AI그림</h3></li>
     <h3>이 소설은 복제인간에 대해 다룬다. 복제인간이 주는 이점은 많지만 윤리적, 사회적, 환경적 문제를 초래할 것 같다는 생각이 들었다. 나 뿐만 아니라 많은 사람들도 그렇게 생각해서 복제인간에 대한 토론이 진행되고 있는 것 같다. 양을 복제한 사례가 있어 머지않아 실현될 것 같은데 이를 대비하여 복제인간에 대해 많은 연구를 해야 한다. 또한 어떻게 해야 긍정적인 방향으로 많이 이끌 수 있을지 깊이 고민을 해야 한다고 생각한다.<br> 
     </h3>
-    <img src="모멘트 아케이드 AI 그림.png" alt=모멘트 아케이드">
+    <img src="모멘트 아케이드 AI 그림.webp" alt=모멘트 아케이드">
     <li><h3>감상평에 대한 AI 감정 평가</h3></li>
     <h3>당신이 작성한 『모멘트 아케이드』에 대한 감상평은 매우 깊이 있고 사려 깊은 의견을 담고 있네요. 감정 평가를 통해 좀 더 자세히 접근해 볼게요.<br>
         &#10024; 우려와 고민: 복제인간의 윤리적, 사회적, 환경적 문제에 대한 우려를 잘 표현하셨습니다. 이러한 기술 발전이 가져올 수 있는 문제점에 대해 고민하는 부분이 매우 인상적입니다.<br>
