--- a/에셔의 손.html
+++ b/에셔의 손.html
@@ -17,7 +17,7 @@
     <li><h3>감상평에 대한 AI그림</h3></li>
     <h3>사람의 뇌에 전자를 이식하고 다른 사람의 기억을 지우고 조작하는 내용이 정말 참신했다. 그리고 전뇌 이식을 받지 못한 인간은 전뇌 사회에서 도태되는 부분이 기억에 남는다. 전뇌 사회에서는 힘쓰는 일은 로봇이 대신하고 인간이 할 수 있는 나머지 일은 능력이 뛰어난 사람들, 즉 전뇌 이식을 받은 사람들이 일을 하게 된다. 전뇌 이식을 받지 못한 사람은 자연스레 도태되게 된다. 내가 만약 돈이 없어서 전뇌 이식 수술을 받지 못한다면 나는 도태된다고 말할 수 있는 것이다. 돈에 따라서 사회에서의 도태 여부가 결정된다는 것이 얼마나 비참한지 상상도 할 수 없다. 나는 이런 일이 머지않아 실현될 것 같아서 기억에 남았다. 이 책을 읽으면서 우리의 미래세계를 상상하게 되어 재미있었다.<br> 
     </h3>
-    <img src="에셔의 손 AI 사진.webp" alt=에셔의 손">
+    <img src="에셔의 손 AI 사진.png" alt=에셔의 손">
      <li><h3>감상평에 대한 AI 감정 평가</h3></li>
     <h3>당신이 작성한 『에셔의 손』 감상평은 정말 탁월해요! 감정 평가를 통해 좀 더 깊이 있게 접근해 볼게요.<br>
         &#10024; 놀라움: 전뇌 이식과 기억 삭제 같은 혁신적인 기술이 등장하는 내용에서 놀라움을 느낀 부분이 인상적입니다. 기술 발전이 가져올 수 있는 새로운 현실에 대한 반응이 잘 드러났어요.<br>
